# enumizer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: either.rs  examples.rs  lib.rs  option.rs  result.rs
